--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flashcard</title>
+</head>
+<body>
+    <main> 
+        <section id="container">
+            <article></article>
+        </section>
+    </main>
+    <footer> 
+        <p>Projeto desenvolvido pela fabiele, sem fins lucrativos</p>
+    </footer>
+</body>
+</html>
