--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <main> 
         <section id="container">
-            <article></article>
+            <article class="cartao">
+                <div class="cartao__conteudo"></div>
+            </article>
         </section>
     </main>
     <footer> 
