--- a/index.html
+++ b/index.html
@@ -3,18 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Flashcard</title>
 </head>
 <body>
-    <main> 
+    <main>
         <section id="container">
-            <article class="cartao">
-                <div class="cartao__conteudo"></div>
-            </article>
+            <!-- <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Geografia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual oceano está a leste da África?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Oceano Índico</p>
+                    </div>
+                </div>
+            </article> -->
         </section>
     </main>
-    <footer> 
-        <p>Projeto desenvolvido pela fabiele, sem fins lucrativos</p>
+    <footer>
+        <p>Projeto desenvolvido pela Fabiele, sem fins lucrativos</p>
     </footer>
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
